# deep-research

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  README.md  app.py  config.py  main.py  progress.md  pyproject.toml  tools.py  utils.py
.ai/assets/: PLAN.md  backlog.md  feature_cli_hardening.md  progress.md  task_archive.md
.ai/scripts/: prompt-pro.sh  prompt_pro.py
.gemini/: settings.json
.github/workflows/: ci.yml
agents/: lead.py  prompts.py  receptionist.py  subagent.py
examples/: test_cli_pipeline.py  test_gemini_tools.py
examples/brief_plans/: iran_war.md  iran_war.txt  research_brief.json  research_brief.md  research_plan.json
examples/microsoft_research/: plan.json  report.md
examples/us_actions_in_iran_israel_conf/: notes_T-01.md  plan.json  report.md  research_log_T03.md  scoping_T-02.md  scoping_T-04.md  search_queries.json
prompts/: lead_planning.md  lead_synthesis.md  receptionist.md  subagent.md
providers/: __init__.py  anthropic_api.py  claude_cli.py  gemini_api.py  gemini_cli.py
references/: citation-formats.md  decomposition-patterns.md  finer-pico-primer.md  source-evaluation-guide.md  synthesis-formats.md
tests/: test_anthropic_loop.py  test_config.py  test_config_extended.py  test_extract_json.py  test_gemini_loop.py  test_path_restriction.py  test_phase3.py  test_prompts.py  test_session_extraction.py  test_session_pathing.py  test_tools.py  test_utils.py  test_utils_json.py  test_workspace_init.py
tests/examples/: research_brief.txt
tests/manual/: repro_config_error.py  (+23 more)
(+34 files in other folders)
